--- a/hours.html
+++ b/hours.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="icon" type="image/png" href="imgs/logo.png" />
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!-- Primary Meta Tags -->
     <title>May Optical</title>
@@ -22,7 +25,7 @@
 
         <!-- NAV BAR -->
         <header>
-            <h1 class="logo">May Optical</h1>
+            <h1 class="logo"><a class="logo" href="index.html">May Optical</a></h1>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
@@ -45,15 +48,41 @@
             </p>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
                 est. Mauris placerat eleifend leo.</p>
+
+
+            <div class="flex-grid">
+                <div class="col">
+
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat eleifend leo.
+                </div>
+                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+                    mi vitae est. Mauris placerat eleifend leo.</div>
+                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+                    mi vitae est. Mauris placerat eleifend leo.</div>
+            </div>
+
         </article>
-        <aside class="aside aside-1">Aside 1</aside>
-        <aside class="aside aside-2">Aside 2</aside>
+
+
+
+        <aside class="aside aside-1"> </aside>
+        <aside class="aside aside-2"> </aside>
         <footer class="footer">
             May Optical © 2021
+
+
+            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-whatsapp"></i></a>
+            <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-phone-alt"></i>
+
         </footer>
     </div>
+
+    <!--FONTAWESOME ICONS-->
+    <script src="https://kit.fontawesome.com/42de2dc56d.js" crossorigin="anonymous"></script>
 </body>
-
-
 
 </html>
