--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="icon" type="image/png" href="imgs/logo.png" />
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!-- Primary Meta Tags -->
     <title>May Optical</title>
     <meta name="title" content="May Optical">
     <meta name="description" content="May Optical 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1 T (416) 291-8989 F (416) 591-1119">
-    <meta name="keywords" content="kalvin kao, software developer, java, html, css, android developer, python, toronto">
+    <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
 
 </head>
@@ -22,7 +25,7 @@
 
         <!-- NAV BAR -->
         <header>
-            <h1 class="logo">May Optical</h1>
+            <h1 class="logo"><a class="logo" href="index.html">May Optical</a></h1>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
@@ -45,18 +48,89 @@
             </p>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
                 est. Mauris placerat eleifend leo.</p>
+
+
+            <div class="flex-grid">
+                <div class="col">
+
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat eleifend leo.
+                </div>
+                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+                    mi vitae est. Mauris placerat eleifend leo.</div>
+                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+                    mi vitae est. Mauris placerat14124124 eleifend leo.</div>
+            </div>
+
         </article>
-        <aside class="aside aside-1">Aside 1</aside>
-        <aside class="aside aside-2">Aside 2</aside>
+
+
+
+        <aside class="aside aside-1"> </aside>
+        <aside class="aside aside-2"> </aside>
         <footer class="footer">
-            May Optical © 2021
 
 
-            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-whatsapp"></i></a>
-            <i class="fas fa-map-marker-alt"></i>
-            <i class="fas fa-phone-alt"></i>
+            <section class="footer-left">
+                <div>May Optical © 2021
+                </div>
+
+            </section>
+
+            <section class="footer-mid-left">
+                <div>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td style="width: 94px;">Monday&nbsp;</td>
+                                <td style="width: 96px;">11:00 - 5:00</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Tuesday&nbsp;</td>
+                                <td style="width: 96px;">Closed</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Wednesday&nbsp;</td>
+                                <td style="width: 96px;">Closed</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Thursday&nbsp;</td>
+                                <td style="width: 96px;">11:00 - 5:00</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Friday&nbsp;</td>
+                                <td style="width: 96px;">11:00 - 5:00&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Saturday</td>
+                                <td style="width: 96px;">11:00 - 4:00&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td style="width: 94px;">Sunday&nbsp;</td>
+                                <td style="width: 96px;">12:00 - 4:00&nbsp;</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <section class="footer-mid-right">
+                <div><i class="fas fa-map-marker-alt">&nbsp</i> 668 Silver Star Blvd. Unit 206,</div>
+                <div> Scarborough, ON, M1V 5N1</div>
+                <div><i class="fas fa-phone-alt">&nbsp</i>(416) 291-8989</div>
+                <div><i class="fas fa-envelope">&nbsp</i><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a></div>
+                <!--| <i class="fab fa-whatsapp"></i> WhatsApp: (416) 291-8989</div>-->
+            </section>
+
+
+            <section class="footer-right">
+                <div>Follow Us</div>
+                <div>
+                    <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
+                    <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
+                </div>
+            </section>
+
 
         </footer>
     </div>
@@ -64,7 +138,5 @@
     <!--FONTAWESOME ICONS-->
     <script src="https://kit.fontawesome.com/42de2dc56d.js" crossorigin="anonymous"></script>
 </body>
-
-
 
 </html>
