--- a/about.html
+++ b/about.html
@@ -13,9 +13,8 @@
     <title>May Optical</title>
     <meta name="title" content="May Optical">
     <meta name="description" content="May Optical 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1 T (416) 291-8989 F (416) 591-1119">
-    <meta name="keywords" content="kalvin kao, software developer, java, html, css, android developer, python, toronto">
+    <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
-
 </head>
 
 
@@ -52,14 +51,20 @@
 
             <div class="flex-grid">
                 <div class="col">
+                    <img src="imgs/1.png"></img>
 
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
                     placerat eleifend leo.
                 </div>
-                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                    mi vitae est. Mauris placerat eleifend leo.</div>
-                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                    mi vitae est. Mauris placerat eleifend leo.</div>
+                <div class="col">
+                    <img src="imgs/2.jpg"></img>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat eleifend leo.</div>
+                <div class="col">
+                    <img src="imgs/3.jpg"></img>
+
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat14124124 eleifend leo.</div>
             </div>
 
         </article>
@@ -69,16 +74,75 @@
         <aside class="aside aside-1"> </aside>
         <aside class="aside aside-2"> </aside>
         <footer class="footer">
-            May Optical © 2021
 
-            <section class="footer-links">
-                <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/mayopticalca/"><i class="fab fa-whatsapp"></i></a>
+
+            <section class="footer-left">
+                <div>May Optical © 2021
+                </div>
+
             </section>
 
-            <i class="fas fa-map-marker-alt"></i>
-            <i class="fas fa-phone-alt"></i>
+            <section class="footer-mid-left">
+
+                <div>Hours
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Monday</td>
+                                <td>11:00 - 5:00</td>
+                            </tr>
+                            <tr>
+                                <td>Tuesday&nbsp;</td>
+                                <td>Closed</td>
+                            </tr>
+                            <tr>
+                                <td>Wednesday&nbsp;</td>
+                                <td>Closed</td>
+                            </tr>
+                            <tr>
+                                <td>Thursday&nbsp;</td>
+                                <td>11:00 - 5:00</td>
+                            </tr>
+                            <tr>
+                                <td>Friday&nbsp;</td>
+                                <td>11:00 - 5:00&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td>Saturday</td>
+                                <td>11:00 - 4:00&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td>Sunday&nbsp;</td>
+                                <td>12:00 - 4:00&nbsp;</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <section class="footer-mid-right">
+                <div>Location</div>
+                <div><i class="fas fa-map-marker-alt">&nbsp</i> 668 Silver Star Blvd. Unit 206,</div>
+                <div> Scarborough, ON, M1V 5N1</div>
+                <div>Phone</div>
+
+                <div><i class="fas fa-phone-alt">&nbsp</i>
+                    <a href="tel:416-291-8989"> (416) 291-8989</a></div>
+                <div>Email</div>
+
+                <div><i class="fas fa-envelope">&nbsp</i><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a></div>
+                <!--| <i class="fab fa-whatsapp"></i> WhatsApp: (416) 291-8989</div>-->
+            </section>
+
+
+            <section class="footer-right">
+                <div>Follow Us</div>
+                <div>
+                    <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
+                    <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
+                </div>
+            </section>
+
 
         </footer>
     </div>
