--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta name="description" content="May Optical 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1 T (416) 291-8989 F (416) 591-1119">
     <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
-
 </head>
 
 
@@ -29,12 +28,12 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="hours.html">Hours</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#main">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#hours">Hours</a></li>
+                    <li><a href="#contact">Contact</a></li>
 
                 </ul>
             </nav>
@@ -43,7 +42,7 @@
         </label>
         </header>
 
-        <article class="main">
+        <section id="main">
             <p><img class="center" src="imgs/bg.jpg">
             </p>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
@@ -52,22 +51,78 @@
 
             <div class="flex-grid">
                 <div class="col">
+                    <img src="imgs/1.png"></img>
 
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
                     placerat eleifend leo.
                 </div>
-                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                    mi vitae est. Mauris placerat eleifend leo.</div>
-                <div class="col">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                    mi vitae est. Mauris placerat14124124 eleifend leo.</div>
+                <div class="col">
+                    <img src="imgs/2.jpg"></img>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat eleifend leo.</div>
+                <div class="col">
+                    <img src="imgs/3.jpg"></img>
+
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+                    placerat14124124 eleifend leo.</div>
             </div>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <p>
+                At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+            </p>
+        </section>
 
-        </article>
+        <section id="products">
+            <h2>Products</h2>
+            <article>
+                <p>
+                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                </p>
 
 
+            </article>
+        </section>
 
-        <aside class="aside aside-1"> </aside>
-        <aside class="aside aside-2"> </aside>
+
+        <section id="services">
+            <h2>Services</h2>
+            <article>
+                <p>
+                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                </p>
+
+
+            </article>
+        </section>
+
+        <section id="hours">
+            <h2>Hours</h2>
+            <article>
+                <p>
+                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                </p>
+
+
+            </article>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <article>
+                <p>
+                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                </p>
+
+
+            </article>
+        </section>
         <footer class="footer">
 
 
@@ -78,46 +133,59 @@
             </section>
 
             <section class="footer-mid-left">
-                <div>
+
+                <div>Hours
                     <table>
                         <tbody>
                             <tr>
-                                <td style="width: 94px;">Monday&nbsp;</td>
-                                <td style="width: 96px;">11:00 - 5:00</td>
+                                <td>Monday</td>
+                                <td>11:00 - 5:00</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Tuesday&nbsp;</td>
-                                <td style="width: 96px;">Closed</td>
+                                <td>Tuesday&nbsp;</td>
+                                <td>Closed</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Wednesday&nbsp;</td>
-                                <td style="width: 96px;">Closed</td>
+                                <td>Wednesday&nbsp;</td>
+                                <td>Closed</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Thursday&nbsp;</td>
-                                <td style="width: 96px;">11:00 - 5:00</td>
+                                <td>Thursday&nbsp;</td>
+                                <td>11:00 - 5:00</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Friday&nbsp;</td>
-                                <td style="width: 96px;">11:00 - 5:00&nbsp;</td>
+                                <td>Friday&nbsp;</td>
+                                <td>11:00 - 5:00&nbsp;</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Saturday</td>
-                                <td style="width: 96px;">11:00 - 4:00&nbsp;</td>
+                                <td>Saturday</td>
+                                <td>11:00 - 4:00&nbsp;</td>
                             </tr>
                             <tr>
-                                <td style="width: 94px;">Sunday&nbsp;</td>
-                                <td style="width: 96px;">12:00 - 4:00&nbsp;</td>
+                                <td>Sunday&nbsp;</td>
+                                <td>12:00 - 4:00&nbsp;</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </section>
 
+            <form action="http://maps.google.com/maps" method="get" target="_blank">
+                <label for="saddr">May Optical</label>
+                <input type="hidden" name="daddr" value="May Optical, 668 Silver Star Blvd, Scarborough, ON M1V 5N1" />
+                <input type="submit" value="Get directions" />
+            </form>
+
             <section class="footer-mid-right">
+                <div>Location</div>
                 <div><i class="fas fa-map-marker-alt">&nbsp</i> 668 Silver Star Blvd. Unit 206,</div>
                 <div> Scarborough, ON, M1V 5N1</div>
-                <div><i class="fas fa-phone-alt">&nbsp</i>(416) 291-8989</div>
+                <div>Phone</div>
+
+                <div><i class="fas fa-phone-alt">&nbsp</i>
+                    <a href="tel:416-291-8989"> (416) 291-8989</a></div>
+                <div>Email</div>
+
                 <div><i class="fas fa-envelope">&nbsp</i><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a></div>
                 <!--| <i class="fab fa-whatsapp"></i> WhatsApp: (416) 291-8989</div>-->
             </section>
