--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <!--load all styles -->
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 
     <link rel="icon" type="image/png" href="imgs/logo.png" />
     <!--Google fonts-->
@@ -15,11 +17,12 @@
     <meta name="description" content="May Optical 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1 T (416) 291-8989 F (416) 591-1119">
     <meta name="keywords" content="May Optical, glasses, lens, prescription glasses, contact lens, Scarborough, Toronto, Markham, Local, Family-owned">
     <meta name="author" content="Kalvin Kao">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
 <body>
-
+    <section id="home"></section>
     <div class="wrapper">
 
         <!-- NAV BAR -->
@@ -28,7 +31,7 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="#main">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#services">Services</a></li>
@@ -42,37 +45,46 @@
         </label>
         </header>
 
+        <!-- MAIN PAGE START -->
         <section id="main">
-            <p><img class="center" src="imgs/bg.jpg">
-            </p>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
-                est. Mauris placerat eleifend leo.</p>
 
-
-            <div class="flex-grid">
-                <div class="col">
-                    <img src="imgs/1.png"></img>
-
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                    placerat eleifend leo.
+            <!-- HERO IMAGE START -->
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h1 class="slogan1">LOOKING OUT FOR YOUR EYES</h1>
+                    <p class="slogan2">Shop eyewear and contacts at the best possible price</p>
+                    <button>CONTACT US</button>
                 </div>
-                <div class="col">
-                    <img src="imgs/2.jpg"></img>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                    placerat eleifend leo.</div>
-                <div class="col">
-                    <img src="imgs/3.jpg"></img>
+            </div>
 
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                    placerat14124124 eleifend leo.</div>
+
+            <!-- BRANDS -->
+            <h1 class="brands">ALL THE BRANDS YOU LOVE</h1>
+            <div class="grid-container">
+                <div class="grid-item"><img src="imgs/b1.png" alt="For Art's Sake"></div>
+                <div class="grid-item"><img src="imgs/b2.png" alt="TOM FORD"></div>
+                <div class="grid-item"><img src="imgs/b3.png" alt="Saint Laurent"></div>
+                <div class="grid-item"><img src="imgs/b4.png" alt="Gucci"></div>
+                <div class="grid-item"><img src="imgs/b5.png" alt="Salvatore Ferragamo"></div>
+                <div class="grid-item"><img src="imgs/b6.png" alt="Swarovski"></div>
+                <div class="grid-item"><img src="imgs/b7.png" alt="Chloe"></div>
+                <div class="grid-item"><img src="imgs/b8.png" alt="Lacoste"></div>
+                <div class="grid-item"><img src="imgs/b9.png" alt="Tom's"></div>
+
             </div>
         </section>
+
+
+        <!-- ABOUT -->
         <section id="about">
-            <h2>About</h2>
-            <p>
-                At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
-            </p>
+            <h2>ABOUT US</h2>
+            <div>
+                <img src="imgs/store.jfif" alt="May Optical Store">
+                <p>
+                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                </p>
+            </div>
         </section>
 
         <section id="products">
