--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-
 <body>
     <section id="home"></section>
     <div class="wrapper">
@@ -32,7 +31,7 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#nav-about">About</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#hours">Hours</a></li>
@@ -56,56 +55,80 @@
                     <button>CONTACT US</button>
                 </div>
             </div>
+            <section id="nav-about"></section>
+            <!-- ABOUT -->
+            <section id="about">
+                <h2>ABOUT US</h2>
+                <div>
+                    <img src="imgs/store.png" alt="May Optical Store">
+                    <p>
+                        At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                        of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                    </p>
+                    <p>
+                        At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                        of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                    </p>
+                    <p>
+                        At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
+                        of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                    </p>
 
-
-            <!-- BRANDS -->
-            <h1 class="brands">ALL THE BRANDS YOU LOVE</h1>
-            <div class="grid-container">
-                <div class="grid-item"><img src="imgs/b1.png" alt="For Art's Sake"></div>
-                <div class="grid-item"><img src="imgs/b2.png" alt="TOM FORD"></div>
-                <div class="grid-item"><img src="imgs/b3.png" alt="Saint Laurent"></div>
-                <div class="grid-item"><img src="imgs/b4.png" alt="Gucci"></div>
-                <div class="grid-item"><img src="imgs/b5.png" alt="Salvatore Ferragamo"></div>
-                <div class="grid-item"><img src="imgs/b6.png" alt="Swarovski"></div>
-                <div class="grid-item"><img src="imgs/b7.png" alt="Chloe"></div>
-                <div class="grid-item"><img src="imgs/b8.png" alt="Lacoste"></div>
-                <div class="grid-item"><img src="imgs/b9.png" alt="Tom's"></div>
-
-            </div>
+                </div>
+            </section>
         </section>
 
+        <!-- SCROLL TO THE TOP BUTTON -->
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-        <!-- ABOUT -->
-        <section id="about">
-            <h2>ABOUT US</h2>
-            <div>
-                <img src="imgs/store.jfif" alt="May Optical Store">
-                <p>
-                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
-                </p>
-            </div>
-        </section>
 
         <section id="products">
-            <h2>Products</h2>
-            <article>
-                <p>
-                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
-                </p>
-
-
-            </article>
         </section>
+
+        <!-- BRANDS -->
+        <h1 class="brands">ALL THE BRANDS YOU LOVE</h1>
+        <div class="grid-container">
+            <div class="grid-item"><img src="imgs/b1.png" alt="For Art's Sake"></div>
+            <div class="grid-item"><img src="imgs/b2.png" alt="TOM FORD"></div>
+            <div class="grid-item"><img src="imgs/b3.png" alt="Saint Laurent"></div>
+            <div class="grid-item"><img src="imgs/b4.png" alt="Gucci"></div>
+            <div class="grid-item"><img src="imgs/b5.png" alt="Salvatore Ferragamo"></div>
+            <div class="grid-item"><img src="imgs/b6.png" alt="Swarovski"></div>
+            <div class="grid-item"><img src="imgs/b7.png" alt="Chloe"></div>
+            <div class="grid-item"><img src="imgs/b8.png" alt="Lacoste"></div>
+            <div class="grid-item"><img src="imgs/b9.png" alt="Tom's"></div>
+            <div> </div>
+            <button>VIEW ALL</button>
+
+        </div>
+
 
 
         <section id="services">
-            <h2>Services</h2>
+            <h2> SERVICES
+            </h2>
             <article>
+
+                <h3> We provide:</h3>
                 <p>
-                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                    <uo>
+                        <li>prescription eyewear</li>
+                        <li>sunglasses</li>
+                        <li>both soft and rigid contact lenses</li>
+                        <li>safety and sport glasses</li>
+                    </uo>
+                </p>
+                <h3> Services include:</h3>
+                <p>
+                    <uo>
+
+                        <li>repairs to glasses</li>
+                        <li>adjustments</li>
+                        <li>custom alterations <br>(crystal designs, implant nosepads, temple lengthening and shortening, etc.)</li>
+                    </uo>
+                </p>
+                <p>
+                    We accept most insurance company claims, MCSS, ODSP.
                 </p>
 
 
@@ -114,12 +137,40 @@
 
         <section id="hours">
             <h2>Hours</h2>
-            <article>
-                <p>
-                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
-                </p>
-
+            <div>Hours
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Monday</td>
+                            <td>11:00 - 5:00</td>
+                        </tr>
+                        <tr>
+                            <td>Tuesday&nbsp;</td>
+                            <td>Closed</td>
+                        </tr>
+                        <tr>
+                            <td>Wednesday&nbsp;</td>
+                            <td>Closed</td>
+                        </tr>
+                        <tr>
+                            <td>Thursday&nbsp;</td>
+                            <td>11:00 - 5:00</td>
+                        </tr>
+                        <tr>
+                            <td>Friday&nbsp;</td>
+                            <td>11:00 - 5:00&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday</td>
+                            <td>11:00 - 4:00&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td>Sunday&nbsp;</td>
+                            <td>12:00 - 4:00&nbsp;</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             </article>
         </section>
@@ -128,18 +179,21 @@
             <h2>Contact</h2>
             <article>
                 <p>
-                    At May Optical, we have been providing quality eyewear to the Toronto community for over 25 years. Originally opened by Paul Lau in 1985 on Dundas and Spadina, we are now located in Scarborough on Silver Star Blvd and Steeles Ave. We have a great selection
-                    of unique designer frames, sunglasses, contact lenses and more. We strive to meet each customer’s visual needs with our experience, knowledge and our everyday great prices.
+                    PHONE MAP Location 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1
+
                 </p>
 
 
             </article>
         </section>
+
+
+
         <footer class="footer">
 
 
             <section class="footer-left">
-                <div>May Optical © 2021
+                <div>May Optical © 2021. All rights reserved.
                 </div>
 
             </section>
@@ -217,6 +271,10 @@
 
     <!--FONTAWESOME ICONS-->
     <script src="https://kit.fontawesome.com/42de2dc56d.js" crossorigin="anonymous"></script>
+
+    <!-- JAVA SCRIPT -->
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
