--- a/index.html
+++ b/index.html
@@ -113,40 +113,51 @@
             <article>
                 <h2> SERVICES</h2>
 
-                <h3> We provide:</h3>
-                <div id="service-list">
-                    <p>
 
+                <div id="services-left">
+
+
+                </div>
+                <div id="services-mid">
+                    <h3> We provide:</h3>
+                    <div id="service-list">
+                        <p>
+
+                            <ul>
+                                <li>prescription eyewear</li>
+                                <li>sunglasses</li>
+                                <li>both soft and rigid contact lenses</li>
+                                <li>safety and sport glasses</li>
+                            </ul>
+                        </p>
+                    </div>
+                    <h3> Services include:</h3>
+                    <p>
                         <ul>
-                            <li>prescription eyewear</li>
-                            <li>sunglasses</li>
-                            <li>both soft and rigid contact lenses</li>
-                            <li>safety and sport glasses</li>
+                            <li>repairs to glasses</li>
+                            <li>adjustments</li>
+                            <li>custom alterations <br>(crystal designs, implant nosepads, temple lengthening and shortening, etc.)</li>
                         </ul>
                     </p>
+                    <p class="services-bot">
+                        We accept most insurance company claims, MCSS, ODSP.
+                    </p>
+
+
                 </div>
-                <h3> Services include:</h3>
-                <p>
-                    <ul>
-                        <li>repairs to glasses</li>
-                        <li>adjustments</li>
-                        <li>custom alterations <br>(crystal designs, implant nosepads, temple lengthening and shortening, etc.)</li>
-                    </ul>
-                </p>
-                <p>
-                    We accept most insurance company claims, MCSS, ODSP.
-                </p>
+
+
+                <div id="services-right">
+
+
+                </div>
             </article>
         </section>
-
-
-
-
 
         <!-- HOURS -->
         <section id="hours">
             <div>
-                <p id="hrs">Hours</p>
+                <h2 id="hrs">HOURS</h2>
                 <table>
                     <tbody>
                         <tr>
@@ -183,24 +194,46 @@
 
             </article>
         </section>
+        <section id="follow">
 
+            <h2>FOLLOW US</h2>
+            <div>
+                <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
+                <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
+            </div>
+
+
+
+        </section>
         <section id="contact">
-
+            <h2>CONTACT</h2>
             <div class="float-container">
 
                 <div class="float-child">
-                    <div class="green">Address: <br>668 Silver Star Blvd. Unit 206, <br>Scarborough, ON, M1V 5N1</div>
+                    <div class="blue">Phone: <br><a href="tel:+1 416-291-8989"> (416) 291-8989</a></div>
+
+
                 </div>
 
                 <div class="float-child">
-                    <div class="blue">Phone: (416) 291-8989</div>
+                    <div class="green">Email: <br><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a>
+
+
+                    </div>
+
                 </div>
                 <div class="float-child">
-                    <div class="green">Email: info.mayoptical@gmail.com</div>
+                    <div class="float-address">Address: <br>668 Silver Star Blvd. Unit 206, <br>Scarborough, ON, M1V 5N1</div>
+
                 </div>
 
                 <div class="float-child">
-                    <div class="blue">Phone:</div>
+                    <div class="blue">
+                        <section id="map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11514.35648086294!2d-79.3009995!3d43.8228814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa567a537795e4c53!2sMay%20Optical!5e0!3m2!1sen!2sca!4v1612149661963!5m2!1sen!2sca" width="800" height="300"
+                                frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </section>
+                    </div>
                 </div>
             </div>
 
@@ -208,18 +241,10 @@
 
 
 
-        <div>Follow Us</div>
-        <div>
-            <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
-            <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
-        </div>
-
-
         <footer class="footer">
-
-            © Copyright 2021 May Optical - All Rights Reserved
-
+            Copyright © 2021 May Optical. All rights reserved.
         </footer>
+
     </div>
 
     <!--FONTAWESOME ICONS-->
@@ -230,6 +255,5 @@
     <script src="js/script.js"></script>
 
 </body>
-
 
 </html>
