--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- HOURS -->
         <section id="hours">
-            <div>
+            <div id="hours-div">
                 <h2 id="hrs">HOURS</h2>
                 <table>
                     <tbody>
@@ -190,9 +190,11 @@
                         </tr>
                     </tbody>
                 </table>
+                <div style="margin-top: 20px;">Please note that we are closed on all statutory holidays.</div>
+                <div style="margin-top: 20px;"> For extended hours Call/Text via WhatsApp <a href="tell:+1 416-291-8989">(416) 291-8989</a></div>
+
             </div>
 
-            </article>
         </section>
         <section id="follow">
 
