--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="hero-image">
                 <div class="hero-text">
                     <h1 class="slogan1">LOOKING OUT FOR YOUR EYES</h1>
-                    <p class="slogan2">Shop eyewear and contacts at the best possible price</p>
+                    <p class="slogan2">Shop high quality eyewear from around the world</p>
                     <a href="#contact"><button>CONTACT US</button></a>
                 </div>
             </div>
@@ -113,12 +113,13 @@
             <article>
                 <h2> SERVICES</h2>
 
-
-                <div id="services-left">
+                <div id="services-col">
+                    <img height="400px" src="imgs/g1-nobg.png" alt="sillhouette glasses">
 
 
                 </div>
-                <div id="services-mid">
+
+                <div id="services-col">
                     <h3> We provide:</h3>
                     <div id="service-list">
                         <p>
@@ -139,17 +140,15 @@
                             <li>custom alterations <br>(crystal designs, implant nosepads, temple lengthening and shortening, etc.)</li>
                         </ul>
                     </p>
+
                     <p class="services-bot">
                         We accept most insurance company claims, MCSS, ODSP.
                     </p>
-
-
                 </div>
 
 
-                <div id="services-right">
-
-
+                <div id="services-col">
+                    <img height="400px" src="imgs/lens-nobg.png" alt="sillhouette glasses">
                 </div>
             </article>
         </section>
