--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 
                 <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
             </div>
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-            <div class="elfsight-app-fb85f815-22c5-423f-8e94-e2808139d4ec"></div>
 
+            <!-- LightWidget WIDGET -->
+            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cbf92bd7e4325ca9a57019a92a73bf55.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 
         </section>
         <section id="contact">
